2003-08-01  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/pxlmono-JCLResolution.xml, opt/pxlmono-GSResolution.xml,
	  opt/pxlmono-PrinterResolution.xml, opt/pxlmono-PrintoutMode.xml:
	  Made the resolution option for the "pxlmono"/"pxlcolor" drivers
	  a forced composite option which both controls a switch on the
	  GhostScript comman line and inserts a PJL command.

	* opt/183.xml, opt/184.xml, opt/PJL-PJLBinding.xml,
	  opt/PJL-PJLDuplex.xml, opt/PJL-Duplex.xml: Put the "SET DUPLEX"
	  and "SET BINDING" PJL options together with a forced composite
	  option to have a "Duplex" option with the three standard choices
	  (Off, Long Edge, Short Edge).

	* opt/87.xml: More convenient choice names for "Economode" option:
	  "On"/"Off" instead of "Standard"/"Economy".

	* opt/91.xml, opt/127.xml: Renamed "HPLJDensity" to "TonerDensity"
	  also non-HP printers have this option).

	* opt/95.xml: Turn Duplex off by default, as printing with CUPS
	  on a non-Duplex printer with Duplex turned on sometimes leads
	  to a trailing blank page.

	* driver/pxlmono.xml: Text updated.

	* driver/hl1250.xml: Removed "<nopjl />" tag, now JCL options can
	  also be added if the driver already supplies a JCL header.

	* README: Updated for support of nested composite options.

2003-07-29  David Suffield <david.suffield@hp.com>

	* printer/HP-Business_Inkjet_1100.xml: Added the HP Business
	  1100 device.

2003-07-23  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Apple-ImageWriter.xml, printer/Apple-ImageWriter_II.xml,
	  printer/Apple-ImageWriter_LQ.xml, driver/iwlo.xml,
	  driver/iwhi.xml, driver/iwlq.xml, opt/82.xml: Fixed entries for
	  Apple ImageWriters. Added resolution option to ImageWriter LQ,
	  added 120x72 dpi to all models.

2003-07-21  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/Postscript.xml: Updated the text to correspond to
	  Foomatic 3.x.

	* driver/ppd.xml, opt/ppd-postfix.xml, opt/ppd-prefix.xml: Removed