@@ -93,7 +93,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>PrinterResolution=300x300dpi ColorMode=Color Economode=On FastRes=Off</ev_driverval>
+    <ev_driverval>PrinterResolution=300x300dpi ColorMode=Color Economode=On FastRes=Off QualityType=Draft</ev_driverval>
     <constraints>
      <constraint sense="false">
       <driver>pxlmono</driver>
@@ -161,7 +161,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>PrinterResolution=300x300dpi ColorMode=Grayscale Economode=On FastRes=Off</ev_driverval>
+    <ev_driverval>PrinterResolution=300x300dpi ColorMode=Grayscale Economode=On FastRes=Off QualityType=Draft</ev_driverval>
     <constraints>
      <constraint sense="false">
       <driver>pxlmono</driver>
@@ -229,7 +229,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>PrinterResolution=300x300dpi ColorMode=Grayscale Economode=On FastRes=Off</ev_driverval>
+    <ev_driverval>PrinterResolution=300x300dpi ColorMode=Grayscale Economode=On FastRes=Off QualityType=Draft</ev_driverval>
     <constraints>
      <constraint sense="false">
       <driver>pxlmono</driver>
@@ -294,7 +294,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>PrinterResolution=600x600dpi ColorMode=Color Economode=Off FastRes=On</ev_driverval>
+    <ev_driverval>PrinterResolution=600x600dpi ColorMode=Color Economode=Off FastRes=On QualityType=Normal</ev_driverval>
     <constraints>
      <constraint sense="false">
       <driver>pxlmono</driver>
@@ -362,7 +362,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>PrinterResolution=600x600dpi ColorMode=Grayscale Economode=Off FastRes=On</ev_driverval>
+    <ev_driverval>PrinterResolution=600x600dpi ColorMode=Grayscale Economode=Off FastRes=On QualityType=Normal</ev_driverval>
     <constraints>
      <constraint sense="false">
       <driver>pxlmono</driver>
@@ -430,7 +430,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>PrinterResolution=600x600dpi ColorMode=Grayscale Economode=Off FastRes=On</ev_driverval>
+    <ev_driverval>PrinterResolution=600x600dpi ColorMode=Grayscale Economode=Off FastRes=On QualityType=Normal</ev_driverval>
     <constraints>
      <constraint sense="false">
       <driver>pxlmono</driver>
@@ -495,7 +495,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>PrinterResolution=1200x1200dpi ColorMode=Color Economode=Off FastRes=Off</ev_driverval>
+    <ev_driverval>PrinterResolution=1200x1200dpi ColorMode=Color Economode=Off FastRes=Off QualityType=High</ev_driverval>
     <constraints>
      <constraint sense="false">
       <driver>pxlmono</driver>
@@ -523,7 +523,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>PrinterResolution=1200x1200dpi ColorMode=Grayscale Economode=Off FastRes=Off</ev_driverval>
+    <ev_driverval>PrinterResolution=1200x1200dpi ColorMode=Grayscale Economode=Off FastRes=Off QualityType=High</ev_driverval>
     <constraints>
      <constraint sense="false">
       <driver>pxlmono</driver>
@@ -551,7 +551,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>PrinterResolution=1200x1200dpi ColorMode=Grayscale Economode=Off FastRes=Off</ev_driverval>
+    <ev_driverval>PrinterResolution=1200x1200dpi ColorMode=Grayscale Economode=Off FastRes=Off QualityType=High</ev_driverval>
     <constraints>
      <constraint sense="false">
       <driver>pxlmono</driver>
