@@ -4,7 +4,8 @@
 	  opt/pxlmono-PrinterResolution.xml, opt/pxlmono-PrintoutMode.xml:
 	  Made the resolution option for the "pxlmono"/"pxlcolor" drivers
 	  a forced composite option which both controls a switch on the
-	  GhostScript comman line and inserts a PJL command.
+	  GhostScript comman line and inserts a PJL command. Added
+	  "QualityType" PJL option to "PrintoutMode".
 
 	* opt/183.xml, opt/184.xml, opt/PJL-PJLBinding.xml,
 	  opt/PJL-PJLDuplex.xml, opt/PJL-Duplex.xml: Put the "SET DUPLEX"
